# ipl-2025

./: README.md  index.html
data/: 1.json  2.json  result.json  result_till_match_65.json
src/: V0.10-over-vistory-marker.js  V0.11-tooltip-to-match.js  V0.6-glowing-bubble.js  V0.7-cleaned.js  V0.8-team-color.js  V0.9-team-victory.js  result.json  v0.1.js  v0.2.js  v0.3.js  v0.4.js  v0.5.js
src/py/: README.md  __main__.py  getMatchInfo.py  getScoreForEachOver.py  matchInfo.py  match_info.py  overByOver.py  pyproject.toml  teams.json
